--- a/src/index.html
+++ b/src/index.html
@@ -8,24 +8,41 @@
   <title>Document</title>
 </head>
 <body>
-  
-  <div class="container">
-    <h1 id="title" class="title">TODO LIST</h1>
 
-    <div class="search-input-wrapper">
-      <input id="search-input" class="input search-input" placeholder="Search note...">
-      <select id="select-todos" name="todos" class="select-todos">
-        <option value="all">ALL</option>
-        <option value="completed">COMPLETED</option>
-        <option value="uncompleted">UNCOMPLETED</option>
-      </select>
-      <button id="theme-btn" class="theme-btn"></button>
+  <div class="app-wrapper">
+    <div class="left-panel" id="left-panel"></div>
+
+    <div class="container">
+      <h1 id="title" class="title">TODO LIST</h1>
+  
+      <div class="search-input-wrapper">
+        <input id="search-input" class="input search-input" placeholder="Search note...">
+        <select id="select-todos" name="todos" class="select-todos">
+          <option value="all">ALL</option>
+          <option value="completed">COMPLETED</option>
+          <option value="uncompleted">UNCOMPLETED</option>
+        </select>
+        <button id="theme-btn" class="theme-btn"></button>
+      </div>
+  
+      <div class="toggle" id="toggle"></div>
+  
+      <ul id="todos-list" class="todos-list  todos-list-empty"></ul>
+  
+      <div id="add-todo-btn" class="add-todo-btn"></div>
     </div>
 
-    <ul id="todos-list" class="todos-list  todos-list-empty"></ul>
-
-    <div id="add-todo-btn" class="add-todo-btn"></div>
+    <div class="right-panel" id="right-panel">
+      <div class="clock-wrapper">
+        <span id="hour">--</span>
+        <span>:</span>
+        <span id="minutes">--</span>
+        <span>:</span>
+        <span id="sec">--</span>
+      </div>
+    </div>
   </div>
+  
   <script src="index.js" type="module"></script>
 </body>
 </html>
