--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./styles/progress-bar.css">
   <title>Document</title>
 </head>
 <body>
 
   <div class="app-wrapper">
-    <div class="left-panel" id="left-panel"></div>
+    <div class="left-panel" id="left-panel">
+      <div>
+        <div><b>Текущие дела:</b></div>
+        <ul id="current-todos-list"></ul>
+      </div>
+      <div>
+        <div><b>Удаленные дела:</b></div>
+        <ul id="removed-todos-list"></ul>
+      </div>
+      <div>
+        <div>
+          <b>Общее количество дел:</b>
+          <b id="all-todos-amount"></b>
+        </div>
+      </div>
+    </div>
 
     <div class="container">
       <h1 id="title" class="title">TODO LIST</h1>
@@ -39,6 +55,23 @@
         <span id="minutes">--</span>
         <span>:</span>
         <span id="sec">--</span>
+      </div>
+
+      <div id="undo-todos-wrapper" class="undo-todos-wrapper">
+        <div id="undo-modal" class="undo-modal display-none">
+          <div class="undo-modal-text-content">Отменить удаление?</div>
+          <div class="undo-modal-btn-wrapper">
+            <div class="progress-container">
+              <div class="timer">5</div>
+              <svg class="progress-circle" width="25" height="25">
+                <circle class="bg" cx="12.5" cy="12.5" r="10" />
+                <circle class="progress" cx="12.5" cy="12.5" r="10" />
+              </svg>
+            </div>
+            <button class="undo-modal-btn yes">Да</button>
+            <button class="undo-modal-btn no">Нет</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
